--- a/isuA/my.cnf
+++ b/isuA/my.cnf
@@ -21,3 +21,8 @@
 # Import all .cnf files from configuration directory
 !includedir /etc/mysql/conf.d/
 !includedir /etc/mysql/mariadb.conf.d/
+
+[mysqld]
+slow_query_log                = 1
+slow_query_log_file           = /var/lib/mysql/mysqld-slow.log
+long_query_time               = 0
