--- a/isuA/nginx.conf
+++ b/isuA/nginx.conf
@@ -38,6 +38,25 @@ http {
 
     #gzip  on;
 
+    upstream app {
+        server 127.0.0.1:3000;
+    }
+
+    upstream trend_app {
+        server 192.168.0.12:3000;
+    }
+
+    server {
+        location / {
+            proxy_set_header Host $http_host;
+            proxy_pass http://127.0.0.1:3000;
+        }
+        location /api/trend {
+            proxy_set_header Host $http_host;
+            proxy_pass http://192.168.0.12:3000;
+        }
+    }
+
     include /etc/nginx/conf.d/*.conf;
     include /etc/nginx/sites-enabled/*.conf;
 }
