--- a/isuA/nginx.conf
+++ b/isuA/nginx.conf
@@ -29,7 +29,7 @@ http {
                   "\tmethod:$request_method"
                   "\turi:$request_uri";
 
-    access_log  /var/log/nginx/access.log  ltsv;
+    access_log  off;
 
     sendfile        on;
     #tcp_nopush     on;
