nginxいい感じに

--- a/isuA/nginx.conf
+++ b/isuA/nginx.conf
@@ -4,6 +4,7 @@ worker_processes  auto;
 error_log  /var/log/nginx/error.log warn;
 pid        /run/nginx.pid;
 
+worker_rlimit_nofile  4096;
 
 events {
     worker_connections  1024;
@@ -31,10 +32,12 @@ http {
 
     access_log  off;
 
-    sendfile        on;
-    #tcp_nopush     on;
-
-    keepalive_timeout  65;
+    server_tokens off;
+    sendfile on;
+    tcp_nopush on;
+    tcp_nodelay on;
+    keepalive_timeout 120;
+    client_max_body_size 10m;
 
     #gzip  on;
 
@@ -49,11 +52,11 @@ http {
     server {
         location / {
             proxy_set_header Host $http_host;
-            proxy_pass http://127.0.0.1:3000;
+            proxy_pass http://app;
         }
         location /api/trend {
             proxy_set_header Host $http_host;
-            proxy_pass http://192.168.0.12:3000;
+            proxy_pass http://trend_app;
         }
     }
 
